# cloudcard

./: README.md
client/: requirements.txt  test_basic.py  test_on_expire.py
client/xfcloudcard/: __init__.py  client.py  crypto.py
server/: __init__.py  config.py  crypto.py  database.py  main.py  requirements.txt
server/static/: admin.html
test/: test_expire_callback.py
xfcloudcard/: README.md  pyproject.toml  requirements.txt
xfcloudcard/xfcloudcard/: __init__.py  __main__.py  client.py  device_info.py
