[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfcloudcard"
version = "1.0.2"
description = "云控卡密验证客户端库 - 支持 AES+HMAC 加密通信、心跳保活、离线上报"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "songxf"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests >= 2.25.0",
    "pycryptodome >= 3.15.0",
]

[project.urls]
Homepage = "https://github.com/1061700625/cloudcard"
Source = "https://github.com/1061700625/cloudcard"
Issues = "https://github.com/1061700625/cloudcard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["xfcloudcard*"]

[tool.setuptools.package-data]
xfcloudcard = ["py.typed"]
